--- a/revisão e exercícios/html css/index.html
+++ b/revisão e exercícios/html css/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6954/6954009.png" type="image/x-icon">
     <title>Arlindo</title>
 </head>
@@ -19,7 +19,7 @@
 
     <div class="ex2">
         <h1>Arlindo</h1>
-        <img src="img/LANÇAMENTO - ARLINDO.png" alt="Livro Arlindo" title="Livro Arlindo">
+        <img src="style/img/arlindo.png" alt="Livro Arlindo" title="Livro Arlindo">
         <p>
             Uma história sobre descobrir que a gente não tá só. Arlindo é um garoto cheio de sonhos e vontade de encontrar seu lugar no mundo. 
             Tudo o que ele quer é seguir sua vida de adolescente na cidadezinha onde mora, no interior do Rio Grande do Norte.
